--- a/stylesheets/scss/components/_dialogs.scss
+++ b/stylesheets/scss/components/_dialogs.scss
@@ -11,7 +11,7 @@
 	@include opacity(0);
 	position: fixed;
 	width: 100%;
-	@include border-radius($border-size);
+	@include border-radius(var(--border-size, $border-size));
 	z-index: 5;
 	top: 50%;
 	left: 50%;
