--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -143,7 +143,7 @@
 	transition-delay: $setting;
 }
 
-@mixin button( $border-radius: $border-size ) {
+@mixin button( $border-radius: var(--border-size, $border-size) ) {
 	cursor: pointer;
 	@include border-radius( $border-radius );
 	text-decoration: none;
