--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -5,7 +5,7 @@
  **************************************/
 
 html, body {
-	background: $background;
+	background: var(--background, $background);
 	margin: 0;
 	padding: 0;
 }
@@ -115,7 +115,7 @@ main {
 
 .sc-divider {
 	background: if( $theme == light, rgba($black, .12), rgba($white, .12) );
-	height: $border-size / 2;
+	height: var(--border-size, $border-size) / 2;
 }
 
 .sc-trigger {
